k8s/nginx/nginx-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-server 
spec: 
  selector: 
    matchLabels: 
      app: nginx 
  replicas: 1
  template: 
    metadata: 
      labels
        app: nginx 
      annotations: 
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9113' 
    spec: 
      containers: 
        - name: nginx 
          image: nginx 
          ports: 
            - containerPort: 80 
              name: http 
          volumeMounts: 
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf 
              subPath: nginx.conf 
        - name: nginx-exporter 
          image: 'nginx/nginx-prometheus-exporter:0.11.0' 
          args: 
            - '-nginx.scrape-uri=http://localhost/metrics' 
          resources: 
            limits: 
              memory: 128Mi 
              cpu: 0.3 
          ports: 
            - containerPort: 9113 
              name: metrics 
      volumes: 
        - configMap: 
            defaultMode: 420 
            name: nginx-config 
          name: nginx-config
