k8s/nginx/nginx-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-svc 
  labels: 
    app: nginx 
spec: 
  ports: 
  - port: 9113 
    name: metrics 
  selector: 
    app: nginx 

metadata: 
  name: nginx-srv-svc 
  labels: 
    app: nginx 
spec: 
  ports: 
  - port: 80
    name: nginx-server 
  selector: 
    app: nginx
