k8s/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ci-cd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    jenkins.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx-metrics.sanches.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 9113
#  ingressClassName: nginx
  - host: nginx.sanches.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-srv-svc
            port:
              number: 80
  ingressClassName: nginx
